# comp3278-social-hub

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  constants.json  docker-compose.yml  pyproject.toml  ruff.toml  schema.sql
app/: exceptions.py  main.py
app/core/: async_mysql_runner.py  auth.py  config.py  constants.py  db.py  queries.py  run_sql_tool.py  s3.py  vanna.py  vanna_chat_model.py  vanna_config.py
app/routers/: analytics.py  auth.py  comments.py  likes.py  posts.py  users.py  website_config.py
app/schemas/: analytics.py  auth.py  comment.py  like.py  post.py
docker/: Dockerfile.api  Dockerfile.web
docs/report/: REPORT.md  TEXT_TO_SQL.md
docs/report/assets/: backend-layers.mmd  er-diagram.mmd  information-architecture.mmd  sequence-ai-chat.mmd  sequence-create-post.mmd  system-architecture.mmd  text-to-sql-architecture.mmd  text-to-sql-sequence.mmd  ui-analytics.mmd  ui-chat.mmd  ui-feed.mmd  ui-profile.mmd  ui-site-header.mmd
frontend/: .oxlintrc.json
frontend/src/: App.tsx
scripts/: pack_submission.sh  seed.py
tests/: conftest.py  test_analytics.py  test_analytics_queries.py  test_auth.py  test_comments.py  test_likes.py  test_posts.py  test_queries.py  test_s3_avatar_ref.py  test_schemas.py  test_users.py
web/: .oxfmtrc.json  components.json  index.html  knip.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
web/src/components/: AvatarUpload.tsx  CommentItem.tsx  CommentList.tsx  ImageUpload.tsx  LikeButton.tsx  PostCard.tsx  PostList.tsx  SearchBar.tsx  font-toggle-button.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  site-header.tsx
web/src/components/__tests__/: ImageUpload.test.tsx  SearchBar.test.tsx
web/src/components/ai/: actions.tsx  code-block.tsx  conversation.tsx  loader.tsx  message.tsx  model-selector.tsx  prompt-input.tsx  reasoning.tsx  task.tsx  (+3 more)
web/src/context/: AuthContext.tsx
web/src/lib/: appConstants.ts  datetime.ts  estimatePostHeight.ts  nav-data.tsx  navigation.tsx  ui-font.ts
web/src/routes/: __root.tsx  _authenticated.tsx  analytics.tsx  chat.tsx  index.tsx  login.tsx  post.$id.tsx  register.tsx  user.$username.tsx
web/src/test/: server.ts  setup.ts  wrappers.tsx
(+64 files in other folders)
