[project]
name = "social-hub"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.42.0",
    "aiomysql>=0.3.2",
    "cryptography>=43.0.0",
    "aioboto3>=15.5.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "PyJWT>=2.12.1",
    "bcrypt>=5.0.0",
    "structlog>=25.5.0",
    "vanna[openai]>=2.0.2",
    "chromadb-client>=1.5.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "faker>=40.12.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
